--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -46,12 +46,7 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
 
-    // change back if the version is published on modrinth
-    // modApi "maven.modrinth:scriptor-magicae:$rootProject.scriptor_version-fabric"
-    modApi files("libs/scriptor-unpublished-fabric.jar")
-
-    // modApi "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
-
+    modApi "maven.modrinth:scriptor-magicae:$rootProject.scriptor_version-fabric"
     modApi("com.ssblur.unfocused:unfocused-fabric:${rootProject.unfocused_version}")
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
